ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
